--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>userservice</description>
     <properties>
         <java.version>17</java.version>
+        <docker.image.prefix>dasiyahavalim</docker.image.prefix>
     </properties>
     <dependencies>
         <dependency>
@@ -58,6 +59,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <image>
+                        <name>${docker.image.prefix}/${project.artifactId}:latest</name>
+                    </image>
+                    <layers>
+                        <enabled>true</enabled>
+                    </layers>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
